# Multi-Agent-BI-System

./: .env.docker.template  .env.example  .gitignore  ARCHITECTURE_ANALYSIS.md  DOCKER_COMPOSE_MERGE.md  DOCKER_DEPLOYMENT_GUIDE.md  FRONTEND_PROXY_FIX_SUMMARY.md  MCP_CONVERSION_COMPLETE.md  Makefile  NLP_WEBSOCKET_IMPLEMENTATION_SUMMARY.md  PHASE_6_IMPLEMENTATION_PLAN.md  QUERY_CLASSIFICATION_FIX_SUMMARY.md  README.md  SESSION_FIX_SUMMARY.md  SESSION_MANAGEMENT_FIXES_SUMMARY.md  SIMPLIFIED_ARCHITECTURE.md  SYSTEM_CONFIGURATION.md  TASK_AE_1_4_IMPLEMENTATION_SUMMARY.md  TIDB_SQL_GENERATION_FIX.md  UI_UX_FIXES_SUMMARY.md  VIZ_AGENT_DASHBOARD_INTEGRATION_GUIDE.md  WEBSOCKET_CONNECTION_ANALYSIS.md  WEBSOCKET_FIXES_SUMMARY.md  comprehensive_schema_test.py  debug_classifier.py  docker-compose.backup.yml  docker-compose.prod.yml  docker-compose.websocket-fix.yml  docker-compose.yml  enable_websocket_mcp.sh  final_websocket_demo.py  fix_summary.sh  init-uv.sh  quick_health_check.py  setup-dev.sh  simple_websocket_test.py  simplified_nlp_approach.py  system_analysis_report.py  system_test.py  system_test_simple.py  (+46 more)
agents/data-agent/: Dockerfile  Dockerfile.dev  README.md  main.py  main.py.backup  pyproject.toml  standardized_response_template.py  startup.py  test_basic.py  test_basic_integration.py  test_data_agent_comprehensive.py  test_database_connection.py  test_financial_data.py  test_tidb_connection.py  websocket_server.py
agents/nlp-agent/: Dockerfile  Dockerfile.backup  FILE_STRUCTURE_DOCUMENTATION.md  NLP_AGENT_CLEANUP_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  config_optimized.py  main.py  main_optimized.py  performance_config.py  pyproject.toml  pytest.ini  standardized_response_template.py  startup.py  test_optimized_system.sh  websocket_server.py  websocket_server.py.fixed
agents/personal-agent/: Dockerfile  main.py  pyproject.toml
agents/viz-agent/: Dockerfile  README.md  VIZ_AGENT_STATUS.md  main.py  main_fixed.py  pyproject.toml  pytest.ini  run_tests.py  standardized_response_template.py  startup.py  test_integration.py  validate_implementation.py  websocket_server.py
backend/: CONSISTENCY_FIXES.md  CROSS_PLATFORM_IMPROVEMENTS.md  DYNAMIC_VALIDATION_IMPLEMENTATION_SUMMARY.md  Dockerfile  ENVIRONMENT_LOADING_CLEANUP.md  IMPLEMENTATION_SUMMARY.md  MCP_DATABASE_INTEGRATION_SUMMARY.md  PERCENTAGE_VALIDATION_UPGRADE.md  README.md  __init__.py  database_context.py  demo_backend.py  demo_cross_platform_paths.py  demo_decimal_precision.py  demo_percentage_validation.py  demo_reliable_testing.py  demo_validation_system.py  health_check_script.py  main.py  main_corrupted_backup.py  main_restored.py  mcp_client.py  orchestration.py  pyproject.toml  pytest-mcp.ini  startup_with_mcp_check.py  test_api_simple.py  test_communication_integration.py  test_communication_simple.py  test_communication_with_mocks.py  test_mcp_config.py  test_mcp_database_integration.py  test_mcp_integration_basic.py  test_mcp_integration_summary.py  test_mcp_integration_unit.py  test_mcp_schema_intelligence.py  test_mcp_tools_simple.py  test_semicolon_config.py  validate_communication.py  validate_monitoring.py  (+2 more)
backend/communication/: README.md  __init__.py  a2a.py  acp.py  example_usage.py  manager.py  mcp.py  mock_dependencies.py  models.py  router.py
backend/database/: __init__.py  connection.py  migrations.py  schema.sql  validation.py  validation_mcp.py  validation_static_backup.py
backend/schema_knowledge/: REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  __init__.py  example_usage.py  knowledge_base.py  mcp_schema_adapter.py  query_optimizer.py  query_template_engine.py  similarity_matcher.py  sql_cleanup_utility.py  term_mapper.py  test_integration_refactored.py  test_sql_cleanup_utility.py  time_processor.py  types.py
backend/schema_management/: DEPRECATION_FIX_SUMMARY.md  FILE_NAMING_UPDATE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_DOCUMENTATION.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_TESTING_COMPLETE.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  README.md  README_CONFIG.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  __init__.py  ai_semantic_mapper.py  change_detector.py  client.py  config.py  configuration_manager.py  connection_pool.py  demo_ai_semantic_mapping.py  demo_dynamic_validation.py  demo_phase2.py  demo_schema_discovery.py  dynamic_schema_manager.py  dynamic_validator.py  enhanced_cache.py  enhanced_data_validator.py  example_usage.py  health_check.py  integrated_ai_mapper.py  intelligent_query_builder.py  manager.py  models.py  performance_benchmarks.py  performance_optimizer.py  query_builder.py  query_success_analysis.py  run_schema_migration.py  schema_migration_orchestrator.py  semantic_mapper.py  (+11 more)
backend/tests/: conftest.py  run_mcp_comprehensive_tests.py  test_api_endpoints.py  test_communication.py  test_database_connection.py  test_database_pytest.py  test_database_static_backup.py  test_decimal_precision_validation.py  test_dynamic_data_validator.py  test_dynamic_validation.py  test_env_loader.py  test_integration.py  test_mcp_backward_compatibility.py  test_mcp_cache_layer.py  test_mcp_client.py  test_mcp_comprehensive_suite.py  test_mcp_end_to_end_validation.py  test_mcp_fallback_mechanisms.py  test_mcp_integration.py  test_mcp_performance_benchmarks.py  test_mcp_real_server.py  test_mcp_schema_manager.py  test_percentage_validation.py  test_schema_knowledge.py  test_security.py  test_websocket.py  validate_mcp_tests.py
tidb-mcp-server/: .env.example  .env.test  BOOTSTRAP_GUIDE.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION.md  README.md  TASK_5_IMPLEMENTATION_SUMMARY.md  UNIVERSAL_MCP_IMPLEMENTATION.md  docker-compose.yml.backup  pyproject.toml  start_test_server.py  test_config.py  test_http_api.py  test_implementation.py  test_schema_extraction_demo.py  test_server_init.py  test_universal_mcp.py  validate_config.py
tidb-mcp-server/config/: __init__.py
tidb-mcp-server/src/: __init__.py
tidb-mcp-server/tests/: __init__.py  fixtures.py  test_cache_manager.py  test_main.py  (+8 more)
(+255 files in other folders)
