[project]
name = "ai-cfo-backend"
version = "0.1.0"
description = "FastAPI backend for AI CFO BI Agent"
authors = [
    {name = "AI CFO Team", email = "team@ai-cfo.com"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pymysql==1.1.0",
    "cryptography==41.0.7",
    "redis==5.0.1",
    "pika==1.3.2",
    "celery==5.3.4",
    "websockets==12.0",
    "pydantic==2.5.0",
    "httpx==0.25.2",
    "python-dotenv==1.0.0",
    "pyjwt==2.8.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88