[project]
name = "nlp-agent"
version = "2.0.0"
description = "NLP Agent with KIMI integration and MCP context sharing"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.11.1",
    "redis>=5.0.0",
    "aiofiles>=23.2.1",
    "structlog>=23.2.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "asyncio-throttle>=1.0.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
