[project]
name = "ai-cfo-viz-agent"
version = "0.1.0"
description = "Visualization Agent for AI CFO BI Agent"
authors = [
    {name = "AI CFO Team", email = "team@ai-cfo.com"}
]
dependencies = [
    "pydantic>=2.8.0,<3.0.0",
    "redis>=5.0.1,<7.0.0",
    "pika>=1.3.2,<2.0.0",
    "plotly>=5.17.0,<7.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "orjson>=3.9.0,<4.0.0",
    "structlog>=23.0.0,<26.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "psutil>=5.9.0,<8.0.0",
    "kaleido>=0.2.1,<2.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
